--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,45 +2,63 @@ name: Build APK
 
 on:
   push:
-    branches: [ main, master ]
-  workflow_dispatch:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  release:
+    types: [ created ]  # 可选：Release 时触发
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout 代码
-        uses: actions/checkout@v4
+    - uses: actions/checkout@v4  # 克隆仓库
 
-      - name: 设置 Java 11（更兼容旧项目）
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '11'  # 改成 11
+    - name: Set up Java  # Android 需要 JDK
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '17'
 
-      - name: 设置 Flutter（指定兼容版本）
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.22.3'  # 指定版本，先试这个；如果还失败，可换成 3.19.6 或 3.16.0
-          channel: 'stable'
-          cache: true
+    - name: Set up Flutter  # 安装 Flutter
+      uses: subosito/flutter-action@v2
+      with:
+        flutter-version: '3.13.0'  # 匹配仓库版本
+        channel: 'stable'
 
-      - name: 查看 Flutter 环境（可选，帮诊断）
-        run: flutter doctor -v
+    - name: Get dependencies  # 获取 pub 依赖
+      run: flutter pub get
+      working-directory: ./simple_live_app  # 指定 app 目录
 
-      - name: 安装依赖（手机端）
-        run: |
-          cd simple_live_app
-          flutter pub get
+    - name: Build APK  # 编译 Release APK
+      run: flutter build apk --release
+      working-directory: ./simple_live_app
 
-      - name: 构建 Release APK（手机端）
-        run: |
-          cd simple_live_app
-          flutter build apk --release --verbose  # 加 --verbose 方便看详细错误
+    - name: Upload APK artifact  # 上传 APK 供下载
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-release.apk
+        path: simple_live_app/build/app/outputs/flutter-apk/app-release.apk
 
-      - name: 上传 APK 文件
-        uses: actions/upload-artifact@v4
-        with:
-          name: simple-live-app-release.apk
-          path: simple_live_app/build/app/outputs/flutter-apk/app-release.apk
+    # 可选：签名 APK（需在仓库 Settings > Secrets 添加 keystore）
+    # - name: Sign APK
+    #   uses: r0adkll/sign-android-release@v1
+    #   with:
+    #     releaseDirectory: simple_live_app/build/app/outputs/flutter-apk
+    #     signingKeyBase64: ${{ secrets.SIGNING_KEY_BASE64 }}
+    #     alias: ${{ secrets.KEY_ALIAS }}
+    #     keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+    #     keyPassword: ${{ secrets.KEY_PASSWORD }}
+
+    # 可选：上传到 GitHub Release
+    # - name: Upload to Release
+    #   if: github.event_name == 'release'
+    #   uses: actions/upload-release-asset@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     upload_url: ${{ github.event.release.upload_url }}
+    #     asset_path: simple_live_app/build/app/outputs/flutter-apk/app-release.apk
+    #     asset_name: app-release.apk
+    #     asset_content_type: application/vnd.android.package-archive
